--- a/frontend/src/components/general/GenreScroll.module.css
+++ b/frontend/src/components/general/GenreScroll.module.css
@@ -1,5 +1,7 @@
 .check {
   overflow-x: scroll;
+  max-width: 1100px;
+  /* background-color: aqua; */
 }
 
 .check::-webkit-scrollbar {
